# dailyinfo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.openclaw  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  history.json  mkdocs.yml  pyproject.toml  scraper.py  setup.sh  weekly_pool.json
.claude/: settings.local.json
.claude/commands/: zotero-notebooklm.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  run.yml
.omx/: metrics.json
.omx/logs/: turns-2026-05-25.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
config/: feeds.json  scrapers.json  sources.json
dailyinfo_fetcher/: browser_agent.py  config.py  discord_handler.py  github_fetcher.py  message_parser.py  news_fetcher.py  paper_fetcher.py  utils.py
docs/: agent-config.md  architecture.md  cli.md  index.md  sources.md  zotero-notebooklm.md  zotero-notebooklm.zh.md
openclaw_skills/blogwatcher/: SKILL.md
pictures/: README.md
prompts/: ai_news_rewriter.txt
scripts/: backfill_push.py  build_docs.py  cli.py  datasource.py  discord_bot.py  paths.py  push_to_discord.py  run_pipelines.py  weekly_summary.py  zotero_notebooklm.py
skills/zotero-notebooklm/: SKILL.md
skills/zotero-notebooklm/agents/: openai.yaml
tests/: conftest.py  test_cli.py  test_datasource_api.py  test_datasource_rss.py  test_datasource_scrape.py  test_datasource_utils.py  test_fetcher_github.py  test_fetcher_message_parser.py  test_fetcher_news.py  test_fetcher_paper.py  test_paths.py  test_push_to_discord.py  test_run_pipelines.py  test_zotero_notebooklm.py
tests/fixtures/: dlut_news_snippet.html  github_trending.html  huggingface_models.json  sources_min.json
workflows/: Jina reader.json  code_trending_pipeline.json  credentials-template.md  daily_briefing_pipeline.json  n8n_ai_news.json  university_news_pipeline.json
