[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dailyinfo"
version = "0.2.0"
description = "Daily briefing pipeline: scrape → AI summary → Discord push"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wenyu Ouyang" }]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "ruff>=0.4",
]

[project.scripts]
dailyinfo = "scripts.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.uv]
dev-dependencies = []
